--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="logo" src="images/Logo.png" alt="">
+        <img class="logo" src="images/Group.svg" alt="">
         <h1 class="big-heading">An app for winning</h1>
         <p> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
