--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
 
 
   <!-- Footer -->
-
-  <footer id="footer" class="white section">
+<section id="footer">
+<div class="footer">
+  <footer class="white section">
     <div><a class="footer-link" href="privacy.html">Privacy Policy</a></div>
     <div><a class="footer-link" href="support.html">Support</a></div>
     <div class="">
@@ -220,6 +221,10 @@
         <p>© Copyright 2019 Versus Gaming LLC.</p>
       </div>
   </footer>
+</div>
+
+</section>
+
 
 
 </body>
