--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="col-lg-6">
         <img class="logo" src="images/Group.svg" alt="">
         <h1 class="big-heading">An app for winning</h1>
-        <p> The only sports gambling application built for and by the users. </p>
+        <p> The only sports gambling application built for <br> and by the users. </p>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
       </div>
