--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
 
     </section>
 
-
+<!-- Bottom White Banner -->
+  <section>
+    <div class="bottom-banner"></div>
+  </section>
+  
   <!-- Footer -->
 <section id="footer">
 <div class="footer">
